# hybrid_NMS

./: .gitignore  README.md  main.py  pyproject.toml
scripts/: demo_nms.py
src/: bounding_box_project.py  boxes.py  image_io.py  iou.py  nms.py  synthetic.py  viz.py
src/bounding_box_project/: __init__.py  __main__.py  boxes.py  image_io.py  iou.py  nms.py  synthetic.py  viz.py
tests/: test_iou.py  test_nms.py
